crates/viewer/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Ellipses2D.snap
---
source: crates/viewer/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
half_sizes: [[1.0, 1.0]]
centers: [[0.0, 0.0]]
colors: [3161148927]
line_radii: [-1.5]
labels: []
show_labels: [true]
draw_order: [10.0]
class_ids: [0]
